fixed box overflow issue but not done with all RWD

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -14,6 +14,7 @@ body{
   overflow-x:hidden;
   overflow-y:scroll;
   background-image:url("../images/glass.png");
+  font-family: "Microsoft YaHei";
   a, a:hover, a:active{
     text-decoration:none;
     color:black;
@@ -108,8 +109,8 @@ section{
       margin:10px;
       .logo{
         position:relative;
-        width:250px;
-        height:250px;
+        width:100%;
+        height:35vh;
         display:inline-block;
         img{
           position:absolute;
